# sp_vision

./: .gitignore  CMakeLists.txt  Dockerfile  autostart.sh  camera_test_ldd.txt  camera_test_lddebug.txt  camera_test_ldlog.txt  camera_test_run.txt  camera_test_run_root.txt  readme.md  watchdog.sh
assets/: yolo11-int8.xml  yolo11.xml  yolo11_buff_fp16.xml  yolov8_buff.xml
calibration/: calibrate_camera.cpp
configs/: ascento.yaml  calibration.yaml  camera.yaml  ekf.yaml  example.yaml  mvs.yaml  newsentry.yaml  sentry.yaml  standard.yaml  standard3.yaml  standard4.yaml  standard5.yaml  swerve.yaml  test.yaml  uav.yaml
examples/: armor_detector_video.cpp  auto_aim_test.cpp  auto_buff_test.cpp  capture.cpp  dataSetCollection.cpp  track_center.cpp
io/: CMakeLists.txt  camera.cpp  cboard.cpp  cboard.hpp  gimbal.cpp  gimbal.hpp
io/dm_imu/: bsp_crc.cpp  bsp_crc.hpp  dm_imu.cpp  dm_imu.hpp
io/gimbal/: gimbal.cpp  gimbal.hpp  gimbal_utils.cpp  ring_buffer.hpp
io/hikrobot/: hikrobot.cpp  hikrobot.hpp
io/omniperception/: omniperception.cpp  omniperception.hpp
io/ros2/: publish2nav.cpp  publish2nav.hpp  ros2.cpp  ros2.hpp  subscribe2nav.cpp  subscribe2nav.hpp
io/usbcamera/: usbcamera.cpp  usbcamera.hpp
scripts/: fov.py  topic_pub.py
src/: auto_aim_debug.cpp  auto_aim_outpost.cpp  auto_aim_sentry_debug.cpp  auto_aim_thread_debug.cpp  auto_buff_debug.cpp  auto_buff_debug_mpc.cpp  ctrl.cpp  mt_auto_aim_debug.cpp  mt_sentry.cpp  mt_standard.cpp  multithread_debug.cpp  sentry.cpp  sentry_debug.cpp  sentry_multithread.cpp  standard.cpp  standard_mpc.cpp  thread_pool.hpp  uav.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp  armor.cpp  armor.hpp  auto_shoot_aimer.cpp  auto_shoot_aimer.hpp  classifier.cpp  detector.cpp  detector.hpp  shooter.cpp  shooter.hpp  solver.cpp  solver.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp  tracker_old.cpp  yolo11.cpp  yolov8.cpp
tasks/auto_aim/multithread/: commandgener.cpp  commandgener.hpp  mt_detector.cpp  mt_detector.hpp
tasks/auto_aim/old/: armor_aimer.cpp  armor_aimer.hpp  armor_target.hpp  armor_tracker.cpp  armor_tracker.hpp
tasks/auto_aim/planner/: planner.cpp  planner.hpp
tasks/auto_aim/planner/tinympc/: types.hpp
tasks/auto_aim/yolos/: yolo11.cpp  yolov5.cpp  yolov5.hpp  yolov8.cpp
tasks/auto_aim_sentry/: CMakeLists.txt  aimer.cpp  aimer.hpp  armor.cpp  armor.hpp  classifier.cpp  classifier.hpp  detector.cpp  detector.hpp  ekfpnp.cpp  ekfpnp.hpp  end2end.cpp  end2end.hpp  solver.cpp  solver.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp  update_log.md  yolo11.cpp  yolo11.hpp  yolov8.cpp  yolov8.hpp
tasks/auto_buff/: CMakeLists.txt  buff_aimer.cpp  buff_aimer.hpp  buff_detector.cpp  buff_detector.hpp  buff_solver.cpp  buff_solver.hpp  buff_target.cpp  buff_target.hpp  buff_type.cpp  buff_type.hpp  yolov8_buff.cpp  yolov8_buff.hpp
tasks/omniperception/: CMakeLists.txt  decider.cpp  decider.hpp  detection.hpp  perceptron.cpp  perceptron.hpp
tests/: 2stage_test.cpp  armor_detect_test.cpp  armor_detector_video.cpp  armor_detector_video_test.cpp  auto_aim_sentry_test.cpp  auto_aim_test.cpp  auto_buff_test.cpp  auto_fire_test.cpp  auto_shoot_test.cpp  camera_detect_test.cpp  camera_multi_threaded_test.cpp  camera_test.cpp  camera_thread_test.cpp  cartpole_example.cpp  cboard_test.cpp  dm_test.cpp  ekfpnp_test.cpp  gimbal_ctrl.cpp  gimbal_identify.cpp  gimbal_response_test.cpp  gimbal_test.cpp  minimum_vision_system.cpp  multi_usbcamera_test.cpp  omniperception_test.cpp  planner_test.cpp  planner_test_offline.cpp  pnp_test.cpp  publish_test.cpp  subscribe_test.cpp  tradition_armor_test.cpp  usbcamera_test.cpp  yaw_damping_identify.cpp  yolo11_test.cpp  yolo_armor_test.cpp  yolo_video_test.cpp
tinympc/: admm.cpp
tools/: CMakeLists.txt  extended_kalman_filter.cpp  extended_kalman_filter.hpp  math_tools.cpp  math_tools.hpp  ransac_sine_fitter.cpp  ransac_sine_fitter.hpp  recorder.cpp  recorder.hpp  serial_to_vcan.py  thread_pool.hpp  thread_safe_queue.hpp  timer.hpp  unscented_kalman_filter.cpp  unscented_kalman_filter.hpp
true/: 1.txt  15.txt  16.txt  17.txt  19.txt  22.txt  23.txt  24.txt  3.txt  6.txt  7.txt  9.txt
